# Lumina

./: .env.example  .gitignore  README.md  package-lock.json  package.json  stellar-son-gelismeler.md
backend/: package.json  railway.json
backend/src/: app.ts  index.ts
backend/src/routes/: datasource.routes.ts  health.routes.ts  invoice.routes.ts  invoice.ts  payment.routes.ts  pool.routes.ts  pool.ts  proof.ts
backend/src/services/: anchor.service.ts  invoiceService.ts  payment.service.ts  poolService.ts  proofService.ts  stellar.service.ts  xero.service.ts  zkProver.service.ts
backend/src/stellar/: client.ts  contractIds.ts
contracts/: Cargo.toml
contracts/.cargo/: config.toml
contracts/liquidity-pools/: Cargo.toml
contracts/liquidity-pools/src/: lib.rs
contracts/lumina-core/: Cargo.toml
contracts/lumina-core/src/: lib.rs
contracts/nullifier-registry/: Cargo.toml
contracts/nullifier-registry/src/: lib.rs
contracts/risk-oracle/: Cargo.toml
contracts/risk-oracle/src/: lib.rs
scripts/: check-env.sh  debug-zk.sh  deploy.sh  e2e-test.sh  health-check.sh  run-e2e.sh  setup-dev.sh  test-contracts.sh
zk-prover/: Cargo.toml
zk-prover/guest/: Cargo.toml
zk-prover/guest/src/: main.rs
zk-prover/host/: Cargo.toml
zk-prover/host/src/: main.rs
