[package]
name    = "lumina-guest"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "lumina-guest"
path = "src/main.rs"

[dependencies]
# no_std-compatible build with std feature for zkVM guest environment
risc0-zkvm = { workspace = true, default-features = false, features = ["std"] }
serde      = { workspace = true }
sha2       = { workspace = true }

[package.metadata.risc0]
methods = ["lumina-guest"]
