[package]
name    = "lumina-host"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "lumina-host"
path = "src/main.rs"

[dependencies]
risc0-zkvm        = { workspace = true, features = ["prove"] }
bonsai-sdk        = { workspace = true }
serde             = { workspace = true }
serde_json        = "1.0"
anyhow            = "1.0"
hex               = "0.4"
bincode           = "1.3"
reqwest           = { version = "0.12", features = ["json"] }
tokio             = { version = "1", features = ["full"] }
tracing           = "0.1"
tracing-subscriber = "0.3"

[build-dependencies]
risc0-build = { workspace = true }

[package.metadata.risc0]
methods = ["guest"]
